po: update po/pt_BR/case.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/pt_BR/case.po
+++ b/po/pt_BR/case.po
@@ -6,6 +6,7 @@
 # Diego Viegas <diego.viegas@dotpro.com.br>, 2012,2014
 # Diego Viegas <diego.viegas@dotpro.com.br>, 2013
 # Diego Viegas <diego.viegas@dotpro.com.br>, 2012
+# Edson Duarte <edson@artsoft.com.br>, 2016
 # Everton Mateus Jacobsen <everton.jacobsen22@gmail.com>, 2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # Wesley Ferreira <contato@wesleyferreira.adv.br>, 2012
@@ -13,8 +14,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:41+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-10-17 21:39+0000\n"
+"Last-Translator: Edson Duarte <edson@artsoft.com.br>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/civicrm/civicrm/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -232,7 +233,7 @@ msgstr "Limpar Data de Início"
 
 #: CRM/Case/Form/Activity/ChangeCaseType.php
 msgid "Case type changed from %1 to %2"
-msgstr ""
+msgstr "O tipo do processo foi alterado de %1 para %2"
 
 #: CRM/Case/Form/Activity/ChangeCaseType.php
 msgid "Case Type changed successfully."
@@ -391,7 +392,7 @@ msgstr "Datas de Atividades - De"
 
 #: CRM/Case/Form/CaseView.php
 msgid "Deleted Activities"
-msgstr ""
+msgstr "Atividades apagadas"
 
 #: CRM/Case/Form/EditClient.php
 msgid "Select Contact"
@@ -407,11 +408,11 @@ msgstr "Favor selecionar um contato diferente."
 
 #: CRM/Case/Form/Report.php
 msgid "All Activities"
-msgstr ""
+msgstr "Todas as atividades"
 
 #: CRM/Case/Form/Report.php
 msgid "Exclude Completed Activities"
-msgstr ""
+msgstr "Excluir atividades finalizadas"
 
 #: CRM/Case/Form/Report.php
 msgid "Redact (hide) Client and Service Provider Data"
@@ -467,11 +468,11 @@ msgstr[1] ""
 
 #: CRM/Case/Info.php
 msgid "CiviCase Engine"
-msgstr "Motor CiviProcessos"
+msgstr "Mecanismo CiviProcessos"
 
 #: CRM/Case/Info.php
 msgid "delete in CiviCase"
-msgstr ""
+msgstr "Apagar no CiviCase"
 
 #: CRM/Case/Info.php
 msgid "administer CiviCase"
@@ -487,7 +488,7 @@ msgstr ""
 
 #: CRM/Case/Info.php
 msgid "add cases"
-msgstr ""
+msgstr "adicionar processos"
 
 #: CRM/Case/Info.php
 msgid ""
@@ -514,7 +515,7 @@ msgstr ""
 #: CRM/Case/Page/Tab.php CRM/Case/Selector/Search.php
 #: templates/CRM/Case/Form/Case.tpl
 msgid "Delete Case"
-msgstr ""
+msgstr "Apagar processo"
 
 #: CRM/Case/Selector/Search.php templates/CRM/Case/Form/CaseView.tpl
 msgid "Assign to Another Client"
@@ -640,15 +641,15 @@ msgstr "Perfis"
 
 #: ang/crmCaseType/edit.html
 msgid "Add..."
-msgstr ""
+msgstr "Adicionar..."
 
 #: ang/crmCaseType/edit.html
 msgid "Timeline"
-msgstr ""
+msgstr "Linha de tempo"
 
 #: ang/crmCaseType/edit.html
 msgid "Sequence"
-msgstr ""
+msgstr "Sequência"
 
 #: ang/crmCaseType/list.html
 msgid ""
@@ -669,7 +670,7 @@ msgstr ""
 
 #: ang/crmCaseType/timelineTable.html
 msgid "Reference"
-msgstr ""
+msgstr "Referência"
 
 #: ang/crmCaseType.js
 msgid ""
@@ -778,7 +779,7 @@ msgstr ""
 
 #: templates/CRM/Case/Form/ActivityView.tpl
 msgid "Created On"
-msgstr "Criado Em"
+msgstr "Criado em"
 
 #: templates/CRM/Case/Form/ActivityView.tpl
 msgid "View this revision of the activity record."
@@ -1183,7 +1184,7 @@ msgstr ""
 
 #: templates/CRM/Case/Form/CaseView.tpl
 msgid "Export Document"
-msgstr ""
+msgstr "Exportar documento"
 
 #: templates/CRM/Case/Form/CaseView.tpl
 msgid "Are you sure you want to end this relationship?"
