--- a/po/pt_BR/common-base.po
+++ b/po/pt_BR/common-base.po
@@ -10,6 +10,7 @@
 #   <diego.viegas@dotproject.com.br>, 2011-2012
 # drero <dreroips@yahoo.com.br>, 2012
 # drero <dreroips@yahoo.com.br>, 2012
+# Edson Duarte <edson@artsoft.com.br>, 2016
 # Enrico Nicoletto <enrico.BR@gmx.co.uk>, 2013
 # EVANDRO PIRES <evandroprieto@gmail.com>, 2011,2013
 # EVANDRO PIRES <evandroprieto@gmail.com>, 2011,2013
@@ -31,8 +32,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:42+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-10-17 21:46+0000\n"
+"Last-Translator: Edson Duarte <edson@artsoft.com.br>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/civicrm/civicrm/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -26176,31 +26177,31 @@ msgstr ""
 
 #: CRM/Utils/Check.php
 msgid "System Status: Emergency"
-msgstr ""
+msgstr "Status do sistema: Emergência"
 
 #: CRM/Utils/Check.php
 msgid "System Status: Alert"
-msgstr ""
+msgstr "Status do sistema: Alerta"
 
 #: CRM/Utils/Check.php
 msgid "System Status: Critical"
-msgstr ""
+msgstr "Status do sistema: Crítico"
 
 #: CRM/Utils/Check.php
 msgid "System Status: Error"
-msgstr ""
+msgstr "Status do sistema: Erro"
 
 #: CRM/Utils/Check.php
 msgid "System Status: Warning"
-msgstr ""
+msgstr "Status do sistema: Aviso"
 
 #: CRM/Utils/Check.php
 msgid "System Status: Notice"
-msgstr ""
+msgstr "Status do sistema: Informação"
 
 #: CRM/Utils/Check.php
 msgid "System Status: Ok"
-msgstr ""
+msgstr "Status do sistema: Ok"
 
 #: CRM/Utils/OpenFlashChart.php
 msgid "Yearly (Fiscal)"
@@ -26208,7 +26209,7 @@ msgstr ""
 
 #: CRM/Utils/OpenFlashChart.php
 msgid "%1"
-msgstr ""
+msgstr "%1"
 
 #: CRM/Utils/ReCAPTCHA.php
 msgid "Please go back and complete the CAPTCHA at the bottom of this form."
@@ -26238,23 +26239,23 @@ msgstr ""
 
 #: ang/crmUi.js
 msgid "Hello"
-msgstr ""
+msgstr "Olá"
 
 #: js/crm.insert-shortcode.js
 msgid "Insert"
-msgstr ""
+msgstr "Inserir"
 
 #: js/crm.searchForm.js
 msgid "Confirm action"
-msgstr ""
+msgstr "Confirmar ação"
 
 #: js/jquery/jquery.dashboard.js
 msgid "Expand"
-msgstr ""
+msgstr "Expandir"
 
 #: js/jquery/jquery.dashboard.js
 msgid "Collapse"
-msgstr ""
+msgstr "Colapsar"
 
 #: js/jquery/jquery.dashboard.js
 msgid "You can re-add it by clicking the \"Configure Your Dashboard\" button."
@@ -26262,11 +26263,11 @@ msgstr ""
 
 #: js/jquery/jquery.dashboard.js
 msgid "\"%1\" Removed"
-msgstr ""
+msgstr "\"%1\" removido"
 
 #: js/model/crm.uf.js
 msgid "(Copy)"
-msgstr ""
+msgstr "(copiar)"
 
 #: templates/CRM/ACL/Header.tpl
 msgid ""
@@ -26315,7 +26316,7 @@ msgstr ""
 
 #: templates/CRM/Contact/Form/Merge.tpl
 msgid "overwrite"
-msgstr ""
+msgstr "sobrescrever"
 
 #: templates/CRM/Contact/Form/Merge.tpl
 msgid "match"
@@ -26323,7 +26324,7 @@ msgstr ""
 
 #: templates/CRM/Contact/Form/Merge.tpl
 msgid "migrate"
-msgstr ""
+msgstr "migrar"
 
 #: templates/CRM/Contact/Form/Search/Advanced.hlp
 msgid ""
@@ -26365,7 +26366,7 @@ msgstr ""
 
 #: templates/CRM/Contact/Form/Task/PDFLetterCommon.tpl
 msgid "Downloading..."
-msgstr ""
+msgstr "Baixando..."
 
 #: templates/CRM/Contact/Form/Task/Print.tpl
 msgid "Do Not mail"
@@ -26378,16 +26379,16 @@ msgstr ""
 #: templates/CRM/Contact/Page/DedupeException.tpl
 #: templates/CRM/Contact/Page/DedupeFind.tpl
 msgid "Filter Contacts"
-msgstr ""
+msgstr "Filtrar contatos"
 
 #: templates/CRM/Contact/Page/DedupeException.tpl
 #: templates/CRM/Contact/Page/DedupeFind.tpl
 msgid "Contact 2"
-msgstr ""
+msgstr "Contato 2"
 
 #: templates/CRM/Contact/Page/DedupeFind.tpl
 msgid "Email 1"
-msgstr ""
+msgstr "Email 1"
 
 #: templates/CRM/Contact/Page/DedupeFind.tpl
 msgid "Street Address 1"
@@ -26395,19 +26396,19 @@ msgstr ""
 
 #: templates/CRM/Contact/Page/DedupeFind.tpl
 msgid "Street Address 2"
-msgstr ""
+msgstr "Endereço 2"
 
 #: templates/CRM/Contact/Page/DedupeFind.tpl
 msgid "Postcode 1"
-msgstr ""
+msgstr "Código Postal (CEP) 1"
 
 #: templates/CRM/Contact/Page/DedupeFind.tpl
 msgid "Postcode 2"
-msgstr ""
+msgstr "Código Postal (CEP) 2"
 
 #: templates/CRM/Contact/Page/DedupeFind.tpl
 msgid "Post Code"
-msgstr ""
+msgstr "Código Postal (CEP)"
 
 #: templates/CRM/Contact/Page/DedupeFind.tpl
 msgid "Conflicts"
@@ -26419,7 +26420,7 @@ msgstr ""
 
 #: templates/CRM/Contact/Page/DedupeFind.tpl
 msgid "Postcode"
-msgstr ""
+msgstr "Código Postal (CEP)"
 
 #: templates/CRM/Contact/Page/DedupeFind.tpl
 msgid "Force Merge Selected Duplicates"
@@ -26447,7 +26448,7 @@ msgstr ""
 
 #: templates/CRM/Contact/Page/DedupeFind.tpl
 msgid "List All Duplicates"
-msgstr ""
+msgstr "Listar todos os duplicados"
 
 #: templates/CRM/Contact/Page/DedupeFind.tpl
 msgid "Batch Merge Selected Duplicates"
@@ -26496,7 +26497,7 @@ msgstr ""
 
 #: templates/CRM/Price/Page/Option.tpl
 msgid "Maximum"
-msgstr ""
+msgstr "Máximo"
 
 #: templates/CRM/Profile/Page/MultipleRecordFieldsListing.tpl
 msgid "No records of type \\'%1\\' found."
@@ -26555,7 +26556,7 @@ msgstr ""
 
 #: templates/CRM/common/navigation.js.tpl
 msgid "%1 not found."
-msgstr ""
+msgstr "%1 não foi encontrado"
 
 #: templates/CRM/common/navigation.js.tpl
 msgid "Did you mean to search by Name/Email instead?"
@@ -26563,7 +26564,7 @@ msgstr ""
 
 #: templates/CRM/common/success.tpl
 msgid "The database will be upgraded from %1 to %2."
-msgstr ""
+msgstr "O banco de dados será atualizado de %1 para %2."
 
 #: templates/CRM/common/success.tpl
 msgid ""
@@ -26579,7 +26580,7 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "Payment Methods"
-msgstr ""
+msgstr "Formas de pagamento"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Relative Date Filters"
