po: update po/ca_ES/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ca_ES/common-base.po
+++ b/po/ca_ES/common-base.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-17 22:05+0000\n"
+"PO-Revision-Date: 2016-10-18 08:24+0000\n"
 "Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -5728,7 +5728,7 @@ msgstr "Retorn sobtat degut a un error inesperat - El valor de la columna civicr
 msgid ""
 "Directory and Resource URLs have been updated in the moved database to "
 "reflect current site location."
-msgstr "En la base de dades migrada s'han actualitzat les URLs dels directoris i recursos per tal d'adaptarlos a l'ubicació del lloc actual."
+msgstr "En la base de dades migrada s'han actualitzat les URL dels directoris i recursos per tal d'adaptarlos a l'ubicació del lloc actual."
 
 #: CRM/Core/BAO/ConfigSetting.php
 msgid "Template cache and upload directory have been cleared."
@@ -17846,7 +17846,7 @@ msgstr ""
 
 #: templates/CRM/Custom/Form/Field.tpl
 msgid "Obsolete widget"
-msgstr ""
+msgstr "Giny obsolet"
 
 #: templates/CRM/Custom/Form/Field.tpl
 msgid "View / Edit Multiple Choice Options"
@@ -19875,7 +19875,7 @@ msgid ""
 "Profiles may be linked to specific modules, accessed via built-in CiviCRM "
 "URLs, or embedded into any web page using the HTML Form Snippet feature. "
 "Examples include:"
-msgstr "Els perfils poden estar vinculats a mòduls específics, als que s'accedeix a través de URLs  integrades CiviCRM, o incrustat en qualsevol pàgina web utilitzant la funció de format de fragment HTML . Els exemples inclouen:"
+msgstr "Els perfils poden estar vinculats a mòduls específics, als que s'accedeix a través de URL  integrades CiviCRM, o incrustat en qualsevol pàgina web utilitzant la funció de format de fragment HTML . Els exemples inclouen:"
 
 #: templates/CRM/UF/Page/Group.hlp
 msgid ""
