po: update po/ca_ES/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ca_ES/admin.po
+++ b/po/ca_ES/admin.po
@@ -16,8 +16,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-14 16:17+0000\n"
-"Last-Translator: ixiam <info@ixiam.com>\n"
+"PO-Revision-Date: 2016-10-18 08:34+0000\n"
+"Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1561,7 +1561,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Setting/Url.php
 msgid "Settings - Resource URLs"
-msgstr "Configuracions - URLs de recursos"
+msgstr "Configuracions - URL de recursos"
 
 #: CRM/Admin/Form/Setting/Url.php
 msgid "CiviCRM Resource URL"
@@ -1581,7 +1581,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Setting/Url.php
 msgid "Force Secure URLs (SSL)"
-msgstr "Força URLs segures (SSL)"
+msgstr "Força URL segures (SSL)"
 
 #: CRM/Admin/Form/Setting/Url.php
 msgid "Verify SSL Certs"
@@ -4139,7 +4139,7 @@ msgstr "Forçar SSL"
 msgid ""
 "This setting forces a redirect of all online contribution / member / event "
 "and CiviCRM administrator page requests to SSL secured URLs (https)."
-msgstr "Aquesta configuració força a redireccionar als contribuïdors en línia / mebmbres / esdeveniments i sol·licituds de la pàgina de l'administrador del CiviCRM a passar en SSL, URLs segures (https)."
+msgstr "Aquesta configuració força a redireccionar als contribuïdors en línia / mebmbres / esdeveniments i sol·licituds de la pàgina de l'administrador del CiviCRM a passar en SSL, URL segures (https)."
 
 #: templates/CRM/Admin/Form/Setting/Url.hlp
 msgid ""
@@ -5869,7 +5869,7 @@ msgstr "Alçada del botó en píxels"
 
 #: templates/CRM/Admin/Page/PaymentProcessor.hlp
 msgid "background color for the button"
-msgstr "Color de fons del botó"
+msgstr "color de fons per al botó"
 
 #: templates/CRM/Admin/Page/PaymentProcessor.hlp
 msgid "whether the button is clickable or disabled"
@@ -6331,13 +6331,13 @@ msgstr ""
 
 #: templates/CRM/Admin/Page/Setting.tpl
 msgid "Resource URLs"
-msgstr "Recursos URLs"
+msgstr "Recursos URL"
 
 #: templates/CRM/Admin/Page/Setting.tpl
 msgid ""
 "URLs used to access CiviCRM resources (CSS files, Javascript files, images, "
 "etc.). Enable secure URLs."
-msgstr "URLs utilitzades per a accedir als recursos del CiviCRM (Arxius CSS, Arxius Javascript , Imatges, etc.). Habiliteu URLs segures."
+msgstr "URLs utilitzades per a accedir als recursos del CiviCRM (Arxius CSS, Arxius Javascript , Imatges, etc.). Habiliteu URL segures."
 
 #: templates/CRM/Admin/Page/Setting.tpl
 msgid "Outbound Email (SMTP/Sendmail)"
