po: update po/ca_ES/common-components.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ca_ES/common-components.po
+++ b/po/ca_ES/common-components.po
@@ -14,7 +14,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-17 21:48+0000\n"
+"PO-Revision-Date: 2016-10-18 09:18+0000\n"
 "Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -1264,7 +1264,7 @@ msgstr "NOTA: Alternativament, podeu activar l'opció inferior <strong>pagament 
 msgid ""
 "Check this box if you want to give users the option to submit payment "
 "offline (e.g. mail in a check, call in a credit card, etc.)."
-msgstr "Marqueu aquesta casella si vol donar-li als usuaris l'opció de pagament fora de línia (p. ex. enviar per correu un xec, trucar per pagar amb targeta de crèdit, etc.)."
+msgstr "Marqueu aquesta casella si voleu donar als usuaris l'opció de trametre el pagament fora de línia (p. ex. enviar per correu un xec, trucar per pagar amb targeta de crèdit, etc.)."
 
 #: templates/CRM/Contribute/Form/ContributionPage/Amount.tpl
 #: templates/CRM/Event/Form/ManageEvent/Fee.tpl
