--- a/po/fr_CA/admin.po
+++ b/po/fr_CA/admin.po
@@ -25,8 +25,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:43+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-10-18 19:44+0000\n"
+"Last-Translator: Rick Paré <rick.pare69@gmail.com>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -4538,7 +4538,7 @@ msgid ""
 " components and menu items. Use CiviCRM ACLs to control access to specific "
 "CiviCRM contact groups. You can also configure ACLs to grant or deny access "
 "to specific Events Profiles, and/or Custom Data Fields."
-msgstr "Utilisez <a href='%1'>Drupal contrôle d'accès</a> pour gérer l'accès de base aux composants CiviCRM et des éléments de menu. Utilisez CiviCRM ACLs pour contrôler l'accès à des groupes de contact de CiviCRM spécifiques. Vous pouvez également configurer des ACL pour accorder ou refuser l'accès aux profils des événements spécifiques, et / ou Champs de données personalisées."
+msgstr "Utilisez <a href='%1'>Drupal contrôle d'accès</a> pour gérer l'accès de base aux composants CiviCRM et des éléments de menu. Utilisez CiviCRM ACLs pour contrôler l'accès à des groupes de contact de CiviCRM spécifiques. Vous pouvez également configurer des ACL pour accorder ou refuser l'accès aux profils des événements spécifiques, et / ou Champs de données personnalisées."
 
 #: templates/CRM/Admin/Page/Access.tpl
 msgid ""
@@ -6218,7 +6218,7 @@ msgid ""
 "created, you may also define custom fields to extend relationship "
 "information for that type from <a href='%1'>Administer CiviCRM &raquo; "
 "Custom Data</a>."
-msgstr "Vous pouvez définir autant de relations que vous avez besoin pour couvrir l'ensemble de vos données. Dés qu'une relation est créée, vous pouvez aussi définir les champs personalisés pour étendre les informations des relations pour cette relation particulière <a href='%1'>Administrer CiviCRM &raquo; Données personalisées</a>."
+msgstr "Vous pouvez définir autant de relations dont vous avez besoin pour couvrir l'ensemble de vos données. Lorsqu'une relation est créée, vous pouvez aussi définir les champs personnalisés pour étendre les informations des relations pour cette relation particulière <a href='%1'>Administrer CiviCRM &raquo; Données personnalisées</a>."
 
 #: templates/CRM/Admin/Page/RelationshipType.tpl
 msgid "Add Relationship Type"
