--- a/po/ca_ES/mailing.po
+++ b/po/ca_ES/mailing.po
@@ -12,8 +12,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-17 17:22+0000\n"
-"Last-Translator: ixiam <info@ixiam.com>\n"
+"PO-Revision-Date: 2016-10-18 08:23+0000\n"
+"Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -156,7 +156,7 @@ msgstr "Obertures rastrejables"
 
 #: CRM/Mailing/BAO/Query.php
 msgid "Trackable URLs"
-msgstr "URLs rastrejables"
+msgstr "URL rastrejables"
 
 #: CRM/Mailing/BAO/Query.php
 msgid "Trackable Replies"
