--- a/po/sv_SE/contribute.po
+++ b/po/sv_SE/contribute.po
@@ -11,8 +11,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:41+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-10-18 22:02+0000\n"
+"Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1833,7 +1833,7 @@ msgstr ""
 
 #: CRM/Contribute/Form/Task/PDFLetter.php
 msgid "- no grouping -"
-msgstr ""
+msgstr "- ingen gruppering -"
 
 #: CRM/Contribute/Form/Task/PDFLetter.php
 msgid "Contact and Recurring"
