--- a/po/pt_BR/common-components.po
+++ b/po/pt_BR/common-components.po
@@ -14,8 +14,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:43+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-10-18 05:43+0000\n"
+"Last-Translator: Diego Viegas <diego.viegas@dotpro.com.br>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/civicrm/civicrm/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2204,15 +2204,15 @@ msgstr "Saldo Devedor"
 
 #: CRM/Admin/Form/ScheduleReminders.php CRM/Contribute/Form/Task/PDF.php
 msgid "From Email"
-msgstr ""
+msgstr "De Email"
 
 #: CRM/Campaign/Form/Task/Interview.php CRM/Report/Form.php
 msgid "Ascending"
-msgstr ""
+msgstr "Ascendente"
 
 #: CRM/Campaign/Form/Task/Interview.php CRM/Report/Form.php
 msgid "Descending"
-msgstr ""
+msgstr "Descendente"
 
 #: CRM/Contribute/DAO/ContributionRecur.php
 #: CRM/Contribute/Form/UpdateSubscription.php
@@ -2223,7 +2223,7 @@ msgstr "Número de Vezes"
 #: CRM/Contribute/Form/Contribution/Confirm.php
 #: templates/CRM/Pledge/Page/UserDashboard.tpl
 msgid "Make Payment"
-msgstr ""
+msgstr "Efetuar pagamento"
 
 #: CRM/Contribute/Form/Contribution/Main.php CRM/Event/Form/Participant.php
 #: CRM/Member/Form/Membership.php CRM/Member/Form/MembershipRenewal.php
@@ -2237,7 +2237,7 @@ msgstr "Você não tem todas as permissões necessárias para esta página."
 #: CRM/Contribute/Form/ContributionPage/Amount.php
 #: CRM/Pledge/DAO/PledgeBlock.php
 msgid "Show Recurring Donation Start Date?"
-msgstr ""
+msgstr "Mostrar Data Inicial da Doação Recorrente?"
 
 #: CRM/Contribute/Form/Task/PickProfile.php
 #: CRM/Member/Form/Task/PickProfile.php
@@ -2297,4 +2297,4 @@ msgstr "Aberturas Totais"
 #: CRM/Pledge/BAO/Pledge.php CRM/Report/Form/Pledge/Detail.php
 #: CRM/Report/Form/Pledge/Pbnp.php
 msgid "Next Payment Amount"
-msgstr ""
+msgstr "Valor do Próximo Pagamento"
