--- a/po/pt_BR/admin.po
+++ b/po/pt_BR/admin.po
@@ -4,6 +4,7 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Cristiane Lima <tiane.ash@uol.com.br>, 2016
+# Débora Maia <debora@dotpro.com.br>, 2016
 # Diego Viegas <diego.viegas@dotpro.com.br>, 2012-2013
 # Diego Viegas <diego.viegas@dotpro.com.br>, 2012-2015
 # Diego Viegas <diego.viegas@dotpro.com.br>, 2013
@@ -30,8 +31,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-17 21:27+0000\n"
-"Last-Translator: Edson Duarte <edson@artsoft.com.br>\n"
+"PO-Revision-Date: 2016-10-18 15:04+0000\n"
+"Last-Translator: Débora Maia <debora@dotpro.com.br>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/civicrm/civicrm/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -6656,7 +6657,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Form/Setting/Date.tpl
 msgid "Calendar"
-msgstr ""
+msgstr "Calendário"
 
 #: templates/CRM/Admin/Form/Setting/Localization.hlp
 msgid "Special symbols include:"
