--- a/po/pt_BR/menu.po
+++ b/po/pt_BR/menu.po
@@ -18,8 +18,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:42+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-10-18 05:42+0000\n"
+"Last-Translator: Diego Viegas <diego.viegas@dotpro.com.br>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/civicrm/civicrm/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -157,7 +157,7 @@ msgstr "Atribuir a Outro Cliente"
 
 msgctxt "menu"
 msgid "File on Case"
-msgstr ""
+msgstr "Arquivar no Processo"
 
 msgctxt "menu"
 msgid "Case Details"
@@ -891,7 +891,7 @@ msgstr "CiviCRM Blog"
 
 msgctxt "menu"
 msgid "CiviCRM Getting Started"
-msgstr ""
+msgstr "Iniciando no CiviCRM"
 
 msgctxt "menu"
 msgid "Case Dashlet"
@@ -1346,7 +1346,7 @@ msgstr "Notícias CiviCRM"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Getting Started"
-msgstr ""
+msgstr "Iniciando"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1621,7 +1621,7 @@ msgstr "Configurações do Sistema"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Connections"
-msgstr ""
+msgstr "Conexões"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2165,7 +2165,7 @@ msgstr "Métodos de Pagametos"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Close Accounting Period"
-msgstr ""
+msgstr "Encerrar Período de Contabilidade"
 
 msgctxt "menu"
 msgid "Configure CKEditor"
@@ -2174,11 +2174,11 @@ msgstr "Configurar CKEditor"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "CiviCRM Resources"
-msgstr ""
+msgstr "Recursos do CiviCRM"
 
 msgctxt "menu"
 msgid "Batch Merge Duplicate Contacts"
-msgstr ""
+msgstr "Mesclar Contatos Duplicados em Lote"
 
 msgctxt "menu"
 msgid "Insert CiviCRM Content"
@@ -2210,7 +2210,7 @@ msgstr "Extenções"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "My Reports"
-msgstr ""
+msgstr "Meus Relatórios"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
