--- a/po/pl_PL/mailing.po
+++ b/po/pl_PL/mailing.po
@@ -11,13 +11,14 @@
 # Radek <d.exax@hotmail.com>, 2012
 # Piotr Kaczyński <www@skrzydla.lublin.pl>, 2015
 # Piotr Szotkowski <chastell@chastell.net>, 2011
+# Scardinius <scardinius@chords.pl>, 2016
 # Sergey <kovalski1601@gmail.com>, 2015
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:42+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-10-19 10:18+0000\n"
+"Last-Translator: Scardinius <scardinius@chords.pl>\n"
 "Language-Team: Polish (http://www.transifex.com/civicrm/civicrm/language/pl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -693,7 +694,7 @@ msgstr "Wystąpił błąd w twoim poleceniu"
 
 #: CRM/Mailing/Form/Optout.php
 msgid "Please Confirm Your Opt Out"
-msgstr ""
+msgstr "Potwierdź proszę swoje wypisanie z naszych list"
 
 #: CRM/Mailing/Form/Optout.php
 msgid "Verify email address to opt out:"
@@ -701,11 +702,11 @@ msgstr "Potwierdź swój adres e-mail by zrezygnować z udziału w listach maili
 
 #: CRM/Mailing/Form/Optout.php
 msgid "Email address is required to opt out."
-msgstr ""
+msgstr "Adres e-mail jest niezbędny do wypisania się z naszych list"
 
 #: CRM/Mailing/Form/Optout.php
 msgid "Email: %1 has been successfully opted out"
-msgstr ""
+msgstr "E-mail: %1 został pomyślnie wypisany z naszych list"
 
 #: CRM/Mailing/Form/Optout.php
 msgid ""
