po: update po/sr_RS@latin/countries.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/countries.po
+++ b/po/sr_RS@latin/countries.po
@@ -3,13 +3,14 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Đorđe Kolaković <djordje@catalystbalkans.org>, 2016
 # Kevin Levie <kevin@levity.nl>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:41+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-10-19 14:36+0000\n"
+"Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -19,23 +20,23 @@ msgstr ""
 
 msgctxt "country"
 msgid "Europe and Central Asia"
-msgstr ""
+msgstr "Evropa i Srednja Azija"
 
 msgctxt "country"
 msgid "America South, Central, North and Caribbean"
-msgstr ""
+msgstr "Južna, Centralna, Severna Amerika i Karibi"
 
 msgctxt "country"
 msgid "Middle East and North Africa"
-msgstr ""
+msgstr "Srednji istok i Severna Afrika"
 
 msgctxt "country"
 msgid "Asia-Pacific"
-msgstr ""
+msgstr "Azija-Pacifik"
 
 msgctxt "country"
 msgid "Africa West, East, Central and Southern"
-msgstr ""
+msgstr "Zapadna, Istočna, Centralna i Južna Afrika"
 
 msgctxt "country"
 msgid "unassigned"
@@ -43,7 +44,7 @@ msgstr ""
 
 msgctxt "country"
 msgid "Afghanistan"
-msgstr "Afganistan"
+msgstr "Avganistan"
 
 msgctxt "country"
 msgid "Albania"
@@ -99,7 +100,7 @@ msgstr "Austrija"
 
 msgctxt "country"
 msgid "Azerbaijan"
-msgstr "Azerbajdžan"
+msgstr "Azerbejdžan"
 
 msgctxt "country"
 msgid "Bahrain"
@@ -235,7 +236,7 @@ msgstr "Kolumbija"
 
 msgctxt "country"
 msgid "Comoros"
-msgstr ""
+msgstr "Komori"
 
 msgctxt "country"
 msgid "Congo, The Democratic Republic of the"
@@ -331,7 +332,7 @@ msgstr "Farska Ostrva"
 
 msgctxt "country"
 msgid "Fiji"
-msgstr ""
+msgstr "Fidži"
 
 msgctxt "country"
 msgid "Finland"
@@ -343,19 +344,19 @@ msgstr "Francuska"
 
 msgctxt "country"
 msgid "French Guiana"
-msgstr ""
+msgstr "Francuska Gvajana"
 
 msgctxt "country"
 msgid "French Polynesia"
-msgstr ""
+msgstr "Francuska Polinezija"
 
 msgctxt "country"
 msgid "French Southern Territories"
-msgstr ""
+msgstr "Francuske južne i antarktičke zemlje"
 
 msgctxt "country"
 msgid "Gabon"
-msgstr ""
+msgstr "Gabon"
 
 msgctxt "country"
 msgid "Georgia"
@@ -387,47 +388,47 @@ msgstr "Grenada"
 
 msgctxt "country"
 msgid "Guadeloupe"
-msgstr ""
+msgstr "Gvadelup"
 
 msgctxt "country"
 msgid "Guam"
-msgstr ""
+msgstr "Gvam"
 
 msgctxt "country"
 msgid "Guatemala"
-msgstr ""
+msgstr "Gvatemala"
 
 msgctxt "country"
 msgid "Guinea"
-msgstr ""
+msgstr "Gvineja"
 
 msgctxt "country"
 msgid "Guinea-Bissau"
-msgstr ""
+msgstr "Gvineja Bisao"
 
 msgctxt "country"
 msgid "Guyana"
-msgstr ""
+msgstr "Gijana"
 
 msgctxt "country"
 msgid "Haiti"
-msgstr ""
+msgstr "Haiti"
 
 msgctxt "country"
 msgid "Heard Island and McDonald Islands"
-msgstr ""
+msgstr "Ostrva Herd i Makdonald"
 
 msgctxt "country"
 msgid "Holy See (Vatican City State)"
-msgstr ""
+msgstr "Sveta stolica (Grad-država Vatikan)"
 
 msgctxt "country"
 msgid "Honduras"
-msgstr ""
+msgstr "Honduras"
 
 msgctxt "country"
 msgid "Hong Kong"
-msgstr ""
+msgstr "Hong Kong"
 
 msgctxt "country"
 msgid "Hungary"
@@ -471,7 +472,7 @@ msgstr "Jamajka"
 
 msgctxt "country"
 msgid "Japan"
-msgstr ""
+msgstr "Japan"
 
 msgctxt "country"
 msgid "Jordan"
@@ -499,43 +500,43 @@ msgstr "Južna Koreja"
 
 msgctxt "country"
 msgid "Kuwait"
-msgstr ""
+msgstr "Kuvajt"
 
 msgctxt "country"
 msgid "Kyrgyzstan"
-msgstr ""
+msgstr "Kirgistan"
 
 msgctxt "country"
 msgid "Lao People's Democratic Republic"
-msgstr ""
+msgstr "Laoska Narodna Demokratska Republika"
 
 msgctxt "country"
 msgid "Latvia"
-msgstr ""
+msgstr "Letonija"
 
 msgctxt "country"
 msgid "Lebanon"
-msgstr ""
+msgstr "Liban"
 
 msgctxt "country"
 msgid "Lesotho"
-msgstr ""
+msgstr "Lesoto"
 
 msgctxt "country"
 msgid "Liberia"
-msgstr ""
+msgstr "Liberija"
 
 msgctxt "country"
 msgid "Libya"
-msgstr ""
+msgstr "Libija"
 
 msgctxt "country"
 msgid "Liechtenstein"
-msgstr ""
+msgstr "Lihtenštajn"
 
 msgctxt "country"
 msgid "Lithuania"
-msgstr ""
+msgstr "Litvanija"
 
 msgctxt "country"
 msgid "Luxembourg"
@@ -543,7 +544,7 @@ msgstr "Luksemburg"
 
 msgctxt "country"
 msgid "Macao"
-msgstr ""
+msgstr "Makao"
 
 msgctxt "country"
 msgid "Macedonia, Republic of"
@@ -555,19 +556,19 @@ msgstr "Madagaskar"
 
 msgctxt "country"
 msgid "Malawi"
-msgstr ""
+msgstr "Malavi"
 
 msgctxt "country"
 msgid "Malaysia"
-msgstr ""
+msgstr "Malezija"
 
 msgctxt "country"
 msgid "Maldives"
-msgstr ""
+msgstr "Maldivi"
 
 msgctxt "country"
 msgid "Mali"
-msgstr ""
+msgstr "Mali"
 
 msgctxt "country"
 msgid "Malta"
@@ -575,35 +576,35 @@ msgstr "Malta"
 
 msgctxt "country"
 msgid "Marshall Islands"
-msgstr ""
+msgstr "Maršalska Ostrva"
 
 msgctxt "country"
 msgid "Martinique"
-msgstr ""
+msgstr "Martinik"
 
 msgctxt "country"
 msgid "Mauritania"
-msgstr ""
+msgstr "Mauritanija"
 
 msgctxt "country"
 msgid "Mauritius"
-msgstr ""
+msgstr "Mauricijus"
 
 msgctxt "country"
 msgid "Mayotte"
-msgstr ""
+msgstr "Majot"
 
 msgctxt "country"
 msgid "Mexico"
-msgstr ""
+msgstr "Meksiko"
 
 msgctxt "country"
 msgid "Micronesia, Federated States of"
-msgstr ""
+msgstr "Mikronezija, Savezne Države"
 
 msgctxt "country"
 msgid "Moldova"
-msgstr ""
+msgstr "Moldavija"
 
 msgctxt "country"
 msgid "Monaco"
@@ -611,11 +612,11 @@ msgstr "Monako"
 
 msgctxt "country"
 msgid "Mongolia"
-msgstr ""
+msgstr "Mongolija"
 
 msgctxt "country"
 msgid "Montserrat"
-msgstr ""
+msgstr "Montserat"
 
 msgctxt "country"
 msgid "Morocco"
@@ -623,19 +624,19 @@ msgstr "Maroko"
 
 msgctxt "country"
 msgid "Mozambique"
-msgstr ""
+msgstr "Mozambik"
 
 msgctxt "country"
 msgid "Namibia"
-msgstr ""
+msgstr "Namibija"
 
 msgctxt "country"
 msgid "Nauru"
-msgstr ""
+msgstr "Nauru"
 
 msgctxt "country"
 msgid "Nepal"
-msgstr ""
+msgstr "Nepal"
 
 msgctxt "country"
 msgid "Netherlands"
@@ -643,35 +644,35 @@ msgstr "Holandija"
 
 msgctxt "country"
 msgid "New Caledonia"
-msgstr ""
+msgstr "Nova Kaledonija"
 
 msgctxt "country"
 msgid "New Zealand"
-msgstr ""
+msgstr "Novi Zeland"
 
 msgctxt "country"
 msgid "Nicaragua"
-msgstr ""
+msgstr "Nikaragva"
 
 msgctxt "country"
 msgid "Niger"
-msgstr ""
+msgstr "Niger"
 
 msgctxt "country"
 msgid "Nigeria"
-msgstr ""
+msgstr "Nigerija"
 
 msgctxt "country"
 msgid "Niue"
-msgstr ""
+msgstr "Nijue"
 
 msgctxt "country"
 msgid "Norfolk Island"
-msgstr ""
+msgstr "Norfok"
 
 msgctxt "country"
 msgid "Northern Mariana Islands"
-msgstr ""
+msgstr "Severna Marijanska Ostrva"
 
 msgctxt "country"
 msgid "Norway"
@@ -683,11 +684,11 @@ msgstr "Oman"
 
 msgctxt "country"
 msgid "Pakistan"
-msgstr ""
+msgstr "Pakistan"
 
 msgctxt "country"
 msgid "Palau"
-msgstr ""
+msgstr "Palau"
 
 msgctxt "country"
 msgid "Palestinian Territory, Occupied"
@@ -695,27 +696,27 @@ msgstr ""
 
 msgctxt "country"
 msgid "Panama"
-msgstr ""
+msgstr "Panama"
 
 msgctxt "country"
 msgid "Papua New Guinea"
-msgstr ""
+msgstr "Papua Nova Gvineja"
 
 msgctxt "country"
 msgid "Paraguay"
-msgstr ""
+msgstr "Paragvaj"
 
 msgctxt "country"
 msgid "Peru"
-msgstr ""
+msgstr "Peru"
 
 msgctxt "country"
 msgid "Philippines"
-msgstr ""
+msgstr "Filipini"
 
 msgctxt "country"
 msgid "Pitcairn"
-msgstr ""
+msgstr "Ostrva Pitkern"
 
 msgctxt "country"
 msgid "Poland"
@@ -727,11 +728,11 @@ msgstr "Portugalija"
 
 msgctxt "country"
 msgid "Puerto Rico"
-msgstr ""
+msgstr "Portoriko"
 
 msgctxt "country"
 msgid "Qatar"
-msgstr ""
+msgstr "Katar"
 
 msgctxt "country"
 msgid "Romania"
@@ -743,59 +744,59 @@ msgstr "Rusija"
 
 msgctxt "country"
 msgid "Rwanda"
-msgstr ""
+msgstr "Ruanda"
 
 msgctxt "country"
 msgid "Reunion"
-msgstr ""
+msgstr "Reinion"
 
 msgctxt "country"
 msgid "Saint Helena"
-msgstr ""
+msgstr "Sveta Jelena"
 
 msgctxt "country"
 msgid "Saint Kitts and Nevis"
-msgstr ""
+msgstr "Sent Kits i Nevis"
 
 msgctxt "country"
 msgid "Saint Lucia"
-msgstr ""
+msgstr "Sveta Lucija"
 
 msgctxt "country"
 msgid "Saint Pierre and Miquelon"
-msgstr ""
+msgstr "Sen Pjer i Mikelon"
 
 msgctxt "country"
 msgid "Saint Vincent and the Grenadines"
-msgstr ""
+msgstr "Sent Vinsent i Grenadini"
 
 msgctxt "country"
 msgid "Samoa"
-msgstr ""
+msgstr "Samoa"
 
 msgctxt "country"
 msgid "San Marino"
-msgstr ""
+msgstr "San Marino"
 
 msgctxt "country"
 msgid "Saudi Arabia"
-msgstr ""
+msgstr "Saudijska Arabija"
 
 msgctxt "country"
 msgid "Senegal"
-msgstr ""
+msgstr "Senegal"
 
 msgctxt "country"
 msgid "Seychelles"
-msgstr ""
+msgstr "Sejšeli"
 
 msgctxt "country"
 msgid "Sierra Leone"
-msgstr ""
+msgstr "Sijera Leone"
 
 msgctxt "country"
 msgid "Singapore"
-msgstr ""
+msgstr "Singapur"
 
 msgctxt "country"
 msgid "Slovakia"
@@ -807,19 +808,19 @@ msgstr "Slovenija"
 
 msgctxt "country"
 msgid "Solomon Islands"
-msgstr ""
+msgstr "Solomonova Ostrva"
 
 msgctxt "country"
 msgid "Somalia"
-msgstr ""
+msgstr "Somalija"
 
 msgctxt "country"
 msgid "South Africa"
-msgstr ""
+msgstr "Južna Afrika"
 
 msgctxt "country"
 msgid "South Georgia and the South Sandwich Islands"
-msgstr ""
+msgstr "Južna Džordžija i Južna Sendvička Ostrva"
 
 msgctxt "country"
 msgid "Spain"
@@ -827,11 +828,11 @@ msgstr "Španija"
 
 msgctxt "country"
 msgid "Sri Lanka"
-msgstr ""
+msgstr "Šri Lanka"
 
 msgctxt "country"
 msgid "Sudan"
-msgstr ""
+msgstr "Sudan"
 
 msgctxt "country"
 msgid "Suriname"
@@ -839,11 +840,11 @@ msgstr "Surinam"
 
 msgctxt "country"
 msgid "Svalbard and Jan Mayen"
-msgstr ""
+msgstr "Svalbard i Jan Majen"
 
 msgctxt "country"
 msgid "Swaziland"
-msgstr ""
+msgstr "Svazilend"
 
 msgctxt "country"
 msgid "Sweden"
@@ -855,55 +856,55 @@ msgstr "Švajcarska"
 
 msgctxt "country"
 msgid "Syrian Arab Republic"
-msgstr ""
+msgstr "Sirijska Arapska Republika"
 
 msgctxt "country"
 msgid "Sao Tome and Principe"
-msgstr ""
+msgstr "Sao Tome i Prinsipe"
 
 msgctxt "country"
 msgid "Taiwan"
-msgstr ""
+msgstr "Tajvan"
 
 msgctxt "country"
 msgid "Tajikistan"
-msgstr ""
+msgstr "Tadžikistan"
 
 msgctxt "country"
 msgid "Tanzania, United Republic of"
-msgstr ""
+msgstr "Tanzanija, Ujedinjena Republika"
 
 msgctxt "country"
 msgid "Thailand"
-msgstr ""
+msgstr "Tajland"
 
 msgctxt "country"
 msgid "Bahamas"
-msgstr ""
+msgstr "Bahame"
 
 msgctxt "country"
 msgid "Gambia"
-msgstr ""
+msgstr "Gambija"
 
 msgctxt "country"
 msgid "Togo"
-msgstr ""
+msgstr "Togo"
 
 msgctxt "country"
 msgid "Tokelau"
-msgstr ""
+msgstr "Tokelau"
 
 msgctxt "country"
 msgid "Tonga"
-msgstr ""
+msgstr "Tonga"
 
 msgctxt "country"
 msgid "Trinidad and Tobago"
-msgstr ""
+msgstr "Trinidad i Tobago"
 
 msgctxt "country"
 msgid "Tunisia"
-msgstr ""
+msgstr "Tunis"
 
 msgctxt "country"
 msgid "Turkey"
@@ -911,19 +912,19 @@ msgstr "Turska"
 
 msgctxt "country"
 msgid "Turkmenistan"
-msgstr ""
+msgstr "Turkmenistan"
 
 msgctxt "country"
 msgid "Turks and Caicos Islands"
-msgstr ""
+msgstr "Ostrva Turks i Kajkos"
 
 msgctxt "country"
 msgid "Tuvalu"
-msgstr ""
+msgstr "Tuvalu"
 
 msgctxt "country"
 msgid "Uganda"
-msgstr ""
+msgstr "Uganda"
 
 msgctxt "country"
 msgid "Ukraine"
@@ -931,7 +932,7 @@ msgstr "Ukrajina"
 
 msgctxt "country"
 msgid "United Arab Emirates"
-msgstr ""
+msgstr "Ujedinjeni Arapski Emirati"
 
 msgctxt "country"
 msgid "United Kingdom"
@@ -939,7 +940,7 @@ msgstr "Ujedinjeno Kraljevstvo"
 
 msgctxt "country"
 msgid "United States Minor Outlying Islands"
-msgstr ""
+msgstr "Mala spoljna ostrva Sjedinjenih Država"
 
 msgctxt "country"
 msgid "United States"
@@ -951,11 +952,11 @@ msgstr "Urugvaj"
 
 msgctxt "country"
 msgid "Uzbekistan"
-msgstr ""
+msgstr "Uzbekistan"
 
 msgctxt "country"
 msgid "Vanuatu"
-msgstr ""
+msgstr "Vanuatu"
 
 msgctxt "country"
 msgid "Venezuela"
@@ -963,15 +964,15 @@ msgstr "Venecuela"
 
 msgctxt "country"
 msgid "Viet Nam"
-msgstr ""
+msgstr "Vijetnam"
 
 msgctxt "country"
 msgid "Virgin Islands, U.S."
-msgstr ""
+msgstr "Devičanska ostrva"
 
 msgctxt "country"
 msgid "Wallis and Futuna"
-msgstr ""
+msgstr "Valis i Futuna"
 
 msgctxt "country"
 msgid "Western Sahara"
@@ -979,7 +980,7 @@ msgstr "Zapadna Sahara"
 
 msgctxt "country"
 msgid "Yemen"
-msgstr ""
+msgstr "Jemen"
 
 msgctxt "country"
 msgid "Serbia and Montenegro"
@@ -987,15 +988,15 @@ msgstr "Srbija i Crna Gora"
 
 msgctxt "country"
 msgid "Zambia"
-msgstr ""
+msgstr "Zambija"
 
 msgctxt "country"
 msgid "Zimbabwe"
-msgstr ""
+msgstr "Zimbabve"
 
 msgctxt "country"
 msgid "Åland Islands"
-msgstr ""
+msgstr "Olandska Ostrva"
 
 msgctxt "country"
 msgid "Serbia"
@@ -1007,31 +1008,31 @@ msgstr "Crna Gora"
 
 msgctxt "country"
 msgid "Jersey"
-msgstr ""
+msgstr "Džerzi"
 
 msgctxt "country"
 msgid "Guernsey"
-msgstr ""
+msgstr "Gernzi"
 
 msgctxt "country"
 msgid "Isle of Man"
-msgstr ""
+msgstr "Ostrvo Men"
 
 msgctxt "country"
 msgid "South Sudan"
-msgstr ""
+msgstr "Južni Sudan"
 
 msgctxt "country"
 msgid "Curaçao"
-msgstr ""
+msgstr "Kurasao"
 
 msgctxt "country"
 msgid "Sint Maarten (Dutch Part)"
-msgstr ""
+msgstr "Sveti Martin (Holandija)"
 
 msgctxt "country"
 msgid "Bonaire, Saint Eustatius and Saba"
-msgstr ""
+msgstr "Boner, Sveti Eustahije i Saba"
 
 msgctxt "country"
 msgid "Kosovo"
@@ -1039,27 +1040,27 @@ msgstr "Kosovo"
 
 msgctxt "country"
 msgid "Saint Barthélemy"
-msgstr ""
+msgstr "Sent Bartelemi"
 
 msgctxt "country"
 msgid "Saint Martin (French part)"
-msgstr ""
+msgstr "Sveti Martin (Francuska)"
 
 msgctxt "country"
 msgid "Virgin Islands,British"
-msgstr ""
+msgstr "Devičanska Ostrva, Britanska"
 
 msgctxt "country"
 msgid "Côte d’Ivoire"
-msgstr ""
+msgstr "Obala Slonovače"
 
 msgctxt "country"
 msgid "Iran, Islamic Republic Of"
-msgstr ""
+msgstr "Iran, Islamska Republika"
 
 msgctxt "country"
 msgid "Macedonia, Republic Of"
-msgstr ""
+msgstr "Makedonija, Republika"
 
 msgctxt "country"
 msgid "Palestinian Territory"
