--- a/po/nl_NL/admin.po
+++ b/po/nl_NL/admin.po
@@ -3,6 +3,7 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Betty Dolfing <betty.dolfing@civicoop.org>, 2016
 # HanV <han.velthuis@home.nl>, 2013-2016
 # HanV <han.velthuis@home.nl>, 2012
 # HanV <han.velthuis@home.nl>, 2011-2012
@@ -13,8 +14,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:43+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-10-19 14:21+0000\n"
+"Last-Translator: Betty Dolfing <betty.dolfing@civicoop.org>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -6436,7 +6437,7 @@ msgstr "Relatieve maandwaarden worden berekend op basis van de lengte van de maa
 
 #: CRM/Admin/Form/MessageTemplates.php
 msgid "Upload Document"
-msgstr ""
+msgstr "Upload bijlage"
 
 #: CRM/Admin/Form/MessageTemplates.php
 msgid "Please upload document"
