--- a/po/ro_RO/menu.po
+++ b/po/ro_RO/menu.po
@@ -3,6 +3,7 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# alice pop <aratyis@ndi.org>, 2016
 # Dragos Apostol <dragos18dragon@gmail.com>, 2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # sergiu <vandenboosch@mail.ru>, 2015
@@ -11,8 +12,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:42+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-10-20 08:55+0000\n"
+"Last-Translator: alice pop <aratyis@ndi.org>\n"
 "Language-Team: Romanian (http://www.transifex.com/civicrm/civicrm/language/ro/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -445,7 +446,7 @@ msgstr "Tipuri relaţii"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Contact Types"
-msgstr ""
+msgstr "Tipuri de contact"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -499,7 +500,7 @@ msgstr "Cauta preferintele"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Date Preferences"
-msgstr ""
+msgstr "Date preferate"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -524,7 +525,7 @@ msgstr "Adresa organizației și datele de contact"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "From Email Addresses"
-msgstr ""
+msgstr "De la adresele de email"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1689,7 +1690,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "CiviMember"
-msgstr ""
+msgstr "Membru Civi"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
