po: update po/ca_ES/common-components.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ca_ES/common-components.po
+++ b/po/ca_ES/common-components.po
@@ -14,8 +14,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-18 09:18+0000\n"
-"Last-Translator: francescbassas <francesc@babu.cat>\n"
+"PO-Revision-Date: 2016-10-21 10:36+0000\n"
+"Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1578,7 +1578,7 @@ msgid ""
 " <strong>Unsupervised Duplicate Matching</strong> rules. For the default "
 "duplicate matching rules, you would include a column in each row with the "
 "contributors' Email Address."
-msgstr "Inclogui els camps de dades usades per 'Coincidències' de contactes basats en les seves regles de <strong> Detecció de duplicats sense supervisió </ strong>. Per a les regles de coincidències de duplicats per defecte, hauria d'incloure una columna a cada fila amb l'adreça de correu electrònic dels contribuents."
+msgstr "Inclogui els camps de dades usades per 'Coincidències' de contactes basats en les seves regles de <strong> Detecció de duplicats sense supervisió </strong>. Per a les regles de coincidències de duplicats per defecte, hauria d'incloure una columna a cada fila amb l'adreça de correu electrònic dels contribuents."
 
 #: templates/CRM/Contribute/Import/Form/DataSource.hlp
 #: templates/CRM/Event/Import/Form/DataSource.hlp
@@ -1989,7 +1989,7 @@ msgid ""
 "You can include a column with each contact's <strong>Internal Contact "
 "ID</strong>. This is the unique ID assigned by CiviCRM which is displayed at"
 " the bottom of the Contact Summary screen - and can be exported."
-msgstr "Podeu incloure una columna amb <strong> ID Intern de cada contacte</ strong>. Aquest és l'identificador únic assignat pel CiviCRM que es mostra a la part inferior de la pantalla Resum de contacte - i poden ser exportats."
+msgstr "Podeu incloure una columna amb <strong> ID Intern de cada contacte</strong>. Aquest és l'identificador únic assignat pel CiviCRM que es mostra a la part inferior de la pantalla Resum de contacte - i poden ser exportats."
 
 #: xml/templates/message_templates/event_offline_receipt_html.tpl
 #: xml/templates/message_templates/event_online_receipt_html.tpl
