--- a/po/ca_ES/campaign.po
+++ b/po/ca_ES/campaign.po
@@ -10,8 +10,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-17 16:50+0000\n"
-"Last-Translator: francescbassas <francesc@babu.cat>\n"
+"PO-Revision-Date: 2016-10-21 12:33+0000\n"
+"Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -365,7 +365,7 @@ msgstr "Total de contactes reservats haurien de ser un número positiu "
 msgid ""
 "There are no custom data sets for activity type \"%1\". To create one, <a "
 "href=\"%2\" target=\"%3\">click here</a>."
-msgstr "No existeixen conjunt de dades personalitzades per al tipus d'activitat '%1'. Per a crear un, <a href=\"%2\" target=\"%3\"> feu clic aquí </ a>."
+msgstr "No existeixen conjunt de dades personalitzades per al tipus d'activitat '%1'. Per a crear un, <a href=\"%2\" target=\"%3\">feu clic aquí</a>."
 
 #: CRM/Campaign/Form/Survey/Questions.php
 msgid "Contact Info"
