--- a/po/ca_ES/drupal-civicrm.po
+++ b/po/ca_ES/drupal-civicrm.po
@@ -11,8 +11,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2011-03-27 21:13+0200\n"
-"PO-Revision-Date: 2016-10-18 08:23+0000\n"
-"Last-Translator: francescbassas <francesc@babu.cat>\n"
+"PO-Revision-Date: 2016-10-21 12:34+0000\n"
+"Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -460,13 +460,13 @@ msgstr "Pot:"
 
 #: drupal/civicrm.module
 msgid "read the <a href=\"!1\">CiviCRM Administrator Guide</a>."
-msgstr "llegiu la <a href=\"!1\"> CiviCRM Guia de l'administrador </ a>."
+msgstr "llegiu la <a href=\"!1\"> CiviCRM Guia de l'administrador </a>."
 
 #: drupal/civicrm.module
 msgid ""
 "enable CiviCRM blocks at <a href=\"!1\">Administer &raquo; Site Building "
 "&raquo; Blocks</a>."
-msgstr "permetre als blocs CiviCRM a <a href=\"!1\"> Administrar »Construcció del lloc» Blocs </ a>."
+msgstr "permetre als blocs CiviCRM a <a href=\"!1\"> Administrar &raquo; Construcció del lloc &raquo; Blocs</a>."
 
 #: drupal/civicrm.module
 msgid ""
@@ -478,13 +478,13 @@ msgstr ""
 msgid ""
 "find contacts by name, email address, group membership and or tagging at <a "
 "href=\"!1\">Find Contacts</a>."
-msgstr "cercar contactes per nom, correu electrònic, o la pertinença a un grup i etiquetatge en <a href=\"!1\"> Cerca de contactes </ a>. "
+msgstr "cercar contactes per nom, correu electrònic, o la pertinença a un grup i etiquetatge en <a href=\"!1\">Cerca de contactes</a>. "
 
 #: drupal/civicrm.module
 msgid ""
 "do complex searches based on tags, group membership, location, activities "
 "and custom fields at <a href=\"!1\">Advanced Search</a>."
-msgstr "fer cerques complexes basades en etiquetes, pertinença a un grup, la ubicació, les activitats i camps personalitzats en <a href=\"!1\"> Cerca avançada </ a>."
+msgstr "fer cerques complexes basades en etiquetes, pertinença a un grup, la ubicació, les activitats i camps personalitzats en <a href=\"!1\">Cerca avançada</a>."
 
 #: drupal/civicrm.module
 msgid "create or manage groups at <a href=\"!1\">Manage Groups</a>."
