--- a/po/es_ES/admin.po
+++ b/po/es_ES/admin.po
@@ -32,8 +32,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:43+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-10-21 15:57+0000\n"
+"Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -4659,7 +4659,7 @@ msgid ""
 "may still need to revisit the page to complete or update the settings). You "
 "can access this page again from the <a href=\"%1\">Administer CiviCRM</a> "
 "menu at any time."
-msgstr "Utilice esta lista para revisar y completar las tareas de configuración para su sitio. Usted será redirigido de regreso a esta lista de verificación después de guardar cada configuración. Los ajustes que aún no haya revisado serán  <span class=\"status-overdue\">mostrados en ojo</span>. Después de haber visitado una página, los enlaces <span class=\"status-pending\"> serán mostrados en verde </ span> (aunque todavía puede ser necesario volver a visitar la página para completar o actualizar la configuración). Puede acceder a esta página de nuevo desde el menú href=\"%1\"> <a Administrar CiviCRM </ a> en cualquier momento."
+msgstr "Utilice esta lista para revisar y completar las tareas de configuración para su sitio. Usted será redirigido de regreso a esta lista de verificación después de guardar cada configuración. Los ajustes que aún no haya revisado serán  <span class=\"status-overdue\">mostrados en ojo</span>. Después de haber visitado una página, los enlaces <span class=\"status-pending\"> serán mostrados en verde </span> (aunque todavía puede ser necesario volver a visitar la página para completar o actualizar la configuración). Puede acceder a esta página de nuevo desde el menú <a href=\"%1\">Administrar CiviCRM</a> en cualquier momento."
 
 #: templates/CRM/Admin/Page/ConfigTaskList.tpl
 msgid "Site Configuration and Registration"
@@ -5087,7 +5087,7 @@ msgid ""
 "tasks to run the enabled jobs. However, you can also <a href=\"%1\">run all "
 "scheduled jobs manually</a>, or run specific jobs from this screen (click "
 "'more' and then 'Execute Now')."
-msgstr "Puedes configurar las tareas programadas (tareas CRON) para su instalación CiviCRM. Para la mayoría de los sitios, el administrador del sistema debe configurar uno o más tareas 'cron' para ejecutar los trabajos habilitados. Sin embargo, también puede  <a href=\"%1\"> ejecutar todas las tareas programadas manualmente </ a>, o ejecutar tareas específicas de esta pantalla (haga clic en \"más\" y luego \"Ejecutar ahora\")."
+msgstr "Puedes configurar las tareas programadas (tareas CRON) para su instalación CiviCRM. Para la mayoría de los sitios, el administrador del sistema debe configurar uno o más tareas 'cron' para ejecutar los trabajos habilitados. Sin embargo, también puede  <a href=\"%1\">ejecutar todas las tareas programadas manualmente</a>, o ejecutar tareas específicas de esta pantalla (haga clic en 'más' y luego 'Ejecutar ahora')."
 
 #: templates/CRM/Admin/Page/Job.tpl
 msgid "Add New Scheduled Job"
@@ -5309,7 +5309,7 @@ msgstr "Añadir Plantilla de Mensaje"
 msgid ""
 "There are no User-driven Message Templates entered. You can <a href='%1'>add"
 " one</a>."
-msgstr "No hay Plantillas de Mensajes Dirigida a los Usuarios ingresadas. Usted puede <href='%1'> añadir una <a </ a>."
+msgstr "No hay plantillas de mensajes dirigidas a los usuarios ingresadas. Usted puede <a href='%1'>añadir una</a>."
 
 #: templates/CRM/Admin/Page/MessageTemplates.tpl
 msgid ""
