--- a/po/es_ES/common-base.po
+++ b/po/es_ES/common-base.po
@@ -42,8 +42,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:42+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-10-21 16:11+0000\n"
+"Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -6263,7 +6263,7 @@ msgid ""
 "href=\"%1\">Administer CiviCRM &raquo; Communications &raquo; FROM Email "
 "Addresses</a>. The email address used may need to be a valid mail account "
 "with your email service provider."
-msgstr "El administrador del sitio debe introducir una \"DESDE una dirección de correo electrónico\" válida en <a href=\"%1\">Administrar CiviCRM &raquo; Comunicaciones &raquo; DESDE direcciones de correo electrónico< /a> . La dirección de correo electrónico utilizada necesita ser una cuenta de correo válida con su proveedor de servicios de correo electrónico."
+msgstr "El administrador del sitio debe introducir una \"DESDE una dirección de correo electrónico\" válida en <a href=\"%1\">Administrar CiviCRM &raquo; Comunicaciones &raquo; DESDE direcciones de correo electrónico</a> . La dirección de correo electrónico utilizada necesita ser una cuenta de correo válida con su proveedor de servicios de correo electrónico."
 
 #: CRM/Core/BAO/UFGroup.php
 msgid "Ext."
@@ -17199,7 +17199,7 @@ msgstr "No existen búsquedas guardadas. Para crear una:"
 msgid ""
 "Use <a href='%1'>Find</a> or <a href='%2'>Advanced Search</a> form to enter "
 "search criteria"
-msgstr "Use el formulario <a href=\"%1\"> Buscar </ a> o <a href=\"%2\"> Búsqueda avanzada </ a>  para introducir criterios de búsqueda"
+msgstr "Use el formulario <a href=\"%1\">Buscar</a> o <a href=\"%2\">Búsqueda avanzada</a> para introducir criterios de búsqueda"
 
 #: templates/CRM/Contact/Page/SavedSearch.tpl
 msgid "Run and refine the search criteria as necessary"
@@ -24321,7 +24321,7 @@ msgid ""
 "versions and implement updates as needed to your copies (Administer > "
 "Communications > Message Templates > System Workflow Messages). (<a "
 "href=\"%1\">learn more...</a>)"
-msgstr "Las versiones por defecto de las siguientes plantillas de mensajes de flujo de trabajo del sistema han sido modificadas para manejar una nueva funcionalidad: <ul><li>Eventos - Confirmación de registro y recibo (en línea)</li><li>Eventos - Confirmación de registro y recibo (no en línea)</li><li>Compromisos - Reconocimiento</li><li>Compromisos - Recordatorios de pagos</li><li>Recibo de contribuciones (no en línea)</li><li>Recibo de contribuciones (en-línea)</li><li>Membresías - Enrolar y recibos de renovación (no en línea)</li><li>recibos de membresías (en línea)</li><li>Páginas de campaña personal - Admin Notificación</li></ul> si ha modificado estas plantillas, por favor revea las nuevas versiones por defecto e implemente actualizaciones según sea necesario para sus copias   (Administrar > Comunicaciones > Plantillas de mensaje > Mensajes de flujo de trabajo de sistema)."
+msgstr "Las versiones por defecto de las siguientes plantillas de mensajes de flujo de trabajo del sistema han sido modificadas para manejar una nueva funcionalidad: <ul><li>Contribuciones - Recibo (fuera de línea)</li><li>Contribuciones - Recibo (en línea)</li><li>Contribuciones - Notificaciones inciales y finales recurrentes</li><li>Contribuciones - Actualizaciones recurrentes</li><li>Membresías - Recibo (en línea)</li><li>Membresías - Recibo de inscripción y renovación (fuera de línea)</li><li>Compromisos - Reconocimiento</li></ul>si ha modificado estas plantillas, por favor revise las nuevas versiones por defecto e implemente actualizaciones según sea necesario para sus copias   (Administrar > Comunicaciones > Plantillas de mensaje > Mensajes de flujo de trabajo de sistema). (<a href=\"%1\">leer más...</a>)"
 
 #: CRM/Upgrade/Incremental/php/FourFive.php
 msgid ""
@@ -24684,7 +24684,7 @@ msgid ""
 "/><br />Details: One or more rows are present in the civicrm_option_group "
 "with name like 'civicrm_price_field.amount.%'. <a href='%1'>Check here for "
 "information on diagnosing and correcting this problem.</a>"
-msgstr "Encontramos valores de datos inesperados de una versión anterior de CiviCRM en su base de datos. La actualización no se puede ejecutar hasta que se corrija esta condición.<br /><br />Detalles: una o más filas están presentes en civicrm_option_group con un nombre como \"civicrm_price_field.amount.%\". <a href=\"%1\">Marque aquí para más información sobre el diagnóstico y la corrección de este problema.</ a>"
+msgstr "Encontramos valores de datos inesperados de una versión anterior de CiviCRM en su base de datos. La actualización no se puede ejecutar hasta que se corrija esta condición.<br /><br />Detalles: una o más filas están presentes en civicrm_option_group con un nombre como \"civicrm_price_field.amount.%\". <a href=\"%1\">Marque aquí para más información sobre el diagnóstico y la corrección de este problema.</a>"
 
 #: CRM/Upgrade/Incremental/php/FourTwo.php
 msgid ""
@@ -26152,7 +26152,7 @@ msgstr ""
 
 #: CRM/Utils/Check/Component/OptionGroups.php
 msgid "</tbody></table></p>"
-msgstr ""
+msgstr "</tbody></table></p>"
 
 #: CRM/Utils/Check/Component/OptionGroups.php
 msgid "Option Values with problematic Values"
