po: update po/fr_CA/contribute.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_CA/contribute.po
+++ b/po/fr_CA/contribute.po
@@ -9,6 +9,7 @@
 # Pierre Mathieu <pierrem7@gmail.com>, 2013-2014
 # Pierre Mathieu <pierrem7@gmail.com>, 2013
 # Piotr Szotkowski <chastell@chastell.net>, 2011
+# Rick Paré <rick.pare69@gmail.com>, 2016
 # rmps <rmpsante@gmail.com>, 2014
 # rmps <rmpsante@gmail.com>, 2014
 # samuelsov <samuel@koumbit.org>, 2015
@@ -20,8 +21,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:41+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-10-21 19:25+0000\n"
+"Last-Translator: Rick Paré <rick.pare69@gmail.com>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -3068,7 +3069,7 @@ msgid ""
 "Check this box if you want to give users the option to enter their own "
 "contribution amount. Your page will then include a text field labeled "
 "<strong>Other Amount</strong>."
-msgstr "Cochez cette case si vous voulez permettre aux utilisateurs d'indiquer leur propre montant de contribution. Votre page incluera ensuite un champ texte intitulé <strong>Autre montant</strong>."
+msgstr "Cochez cette case si vous voulez permettre aux utilisateurs d'indiquer leur propre montant de contribution. Votre page inclura ensuite un champ texte intitulé <strong>Autre montant</strong>."
 
 #: templates/CRM/Contribute/Form/ContributionPage/Amount.tpl
 msgid ""
