po: update po/fr_CA/event.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_CA/event.po
+++ b/po/fr_CA/event.po
@@ -3,12 +3,14 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Florent Michelot, 2016
 # Mathieu B <mathieu@brab.ca>, 2016
 # Mathieu Lutfy <mathieu@bidon.ca>, 2012,2014-2016
 # pascoalg <pascoal@ecologieurbaine.net>, 2012
 # pascoalg <pascoal@ecologieurbaine.net>, 2012
 # Pierre Mathieu <pierrem7@gmail.com>, 2013
 # Piotr Szotkowski <chastell@chastell.net>, 2011
+# Rick Paré <rick.pare69@gmail.com>, 2016
 # samuelsov <samuel@koumbit.org>, 2011-2012
 # Stéphane Lussier <stephane@symbiotic.coop>, 2012-2013
 # Stéphane Lussier <stephane@symbiotic.coop>, 2016
@@ -16,8 +18,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:42+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-10-21 19:55+0000\n"
+"Last-Translator: Rick Paré <rick.pare69@gmail.com>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1265,7 +1267,7 @@ msgstr "Les frais de participation à l'événement ne peuvent être moins que z
 
 #: CRM/Event/Form/Registration/Register.php
 msgid "Please select a Payment Method"
-msgstr ""
+msgstr "Veuillez choisir un mode de paiement."
 
 #: CRM/Event/Form/Registration/Register.php
 msgid ""
@@ -2058,7 +2060,7 @@ msgid ""
 "below without setting up a payment processor. All users will then be asked "
 "to submit payment offline (e.g. mail in a check, call in a credit card, "
 "etc.)."
-msgstr "En alternative, vous pouvez activer l'option <strong>Payer plus tard</strong> ci-dessous et ne pas mettre en place de passerelle de paiement. Les participants seront alors invités à effectuer leurs paiement hors ligne (par chèque et courrier, au téléphone par carte de crédit, etc.)."
+msgstr "REMARQUE: Si vous ne voulez pas activer une passerelle de paiement, vous pouvez activer l'option <strong>Payer plus tard</strong> ci-dessous. Les participants seront alors invités à effectuer leurs paiements hors ligne (par chèque et courrier, au téléphone par carte de crédit, etc.)."
 
 #: templates/CRM/Event/Form/ManageEvent/Fee.tpl
 msgid ""
@@ -2108,7 +2110,7 @@ msgid ""
 " Both the label and dollar amount will be displayed. You can also configure "
 "one or more sets of discounted fees by checking \"Discounts by Signup Date\""
 " below."
-msgstr "Utilisez le tableau ci-dessous pour entrer jusqu'à dix montants et labels de tarification. Cela sera présenté sous forme de liste à choix unique. Le label et le montant monétaire sera affiché. Vous pouvez aussi configurer un ou plusieurs ensembles de tarifs réduits en cochant la case ci-dessous  \"Tarif réduit par date d'inscription\""
+msgstr "Utilisez le tableau ci-dessous pour entrer jusqu'à dix montants et leur étiquette descriptive. Cela sera présenté sous forme de liste à choix unique. L'étiquette descriptive et le montant seront affichés.Vous pouvez aussi configurer un ou plusieurs ensembles de tarifs réduits en cochant la case ci-dessous  \"Réductions en fonction de la date d'inscription\"."
 
 #: templates/CRM/Event/Form/ManageEvent/Fee.tpl
 msgid ""
@@ -2121,7 +2123,7 @@ msgstr "Cliquez <a id = 'quickconfig' href='#'>ici</a> si vous voulez configurer
 msgid ""
 "Check this box if you want to offer discounted fees based on registration "
 "date (e.g. 'early-registration discounts')."
-msgstr "Cocher cette case si vous voulez proposer des tarifs réduits en fonction de la date d'inscription (par ex 'tarif réduit pour inscription de bonne heure)"
+msgstr "Cocher cette case si vous voulez proposer des tarifs réduits en fonction de la date d'inscription (par ex.: 'tarif réduit pour inscription hâtive')."
 
 #: templates/CRM/Event/Form/ManageEvent/Fee.tpl
 msgid "another discount set"
@@ -2156,7 +2158,7 @@ msgid ""
 " the event. This information will be displayed on the Event Information "
 "page. It will also be included in online registration pages and confirmation"
 " emails if these features are enabled."
-msgstr "Utilisez ce formulaire pour configurer la localisation et les informations de contacts optionnels pour cet évènement. Ces informations seront affichées sur la page d'information de l'évènement. Ils seront aussi inclus dans les pages d''inscription en ligne et dans les courriels de confirmation si ces fonctionnalités sont activées."
+msgstr "Utilisez ce formulaire pour configurer la localisation et les informations de contacts optionnels pour cet évènement. Ces informations seront affichées sur la page d'information de l'évènement. Ils seront aussi inclus dans les pages d'inscription en ligne et dans les courriels de confirmation si ces fonctionnalités sont activées."
 
 #: templates/CRM/Event/Form/ManageEvent/Location.tpl
 msgid ""
@@ -3653,7 +3655,7 @@ msgstr "Complet ?"
 
 #: CRM/Event/Cart/DAO/EventInCart.php
 msgid "Event In Cart"
-msgstr ""
+msgstr "Événement dans le panier"
 
 #: CRM/Event/DAO/Event.php
 msgid "Default Role"
@@ -3735,11 +3737,11 @@ msgstr "Prénom du destinataire"
 
 #: CRM/Event/Form/SelfSvcTransfer.php
 msgid "Transfer Registration"
-msgstr ""
+msgstr "Transférer la réservation."
 
 #: CRM/Event/Form/SelfSvcTransfer.php
 msgid "Enter valid email address."
-msgstr ""
+msgstr "Veuillez saisir une adresse courriel valide."
 
 #: CRM/Event/Form/SelfSvcTransfer.php
 msgid " is already registered for this event"
@@ -3837,11 +3839,11 @@ msgstr "Lettre PDF - Imprimer pour les participants"
 
 #: CRM/Event/Tokens.php
 msgid "Event Contact (Email)"
-msgstr ""
+msgstr "Contact pour l'événement (courriel)"
 
 #: CRM/Event/Tokens.php
 msgid "Event Contact (Phone)"
-msgstr ""
+msgstr "Contact pour l'événement (téléphone)"
 
 #: templates/CRM/Event/Form/EventFees.tpl
 msgid ""
@@ -3995,7 +3997,7 @@ msgstr ""
 
 #: xml/templates/message_templates/participant_transferred_html.tpl
 msgid "Your Event Registration has been Transferred to %1."
-msgstr ""
+msgstr "Votre réservation pour l'événement a été transférée  à %1."
 
 #: xml/templates/message_templates/participant_transferred_subject.tpl
 msgid "Event Registration Transferred for %1"
