--- a/po/fr_CA/menu.po
+++ b/po/fr_CA/menu.po
@@ -19,8 +19,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:42+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-10-21 18:22+0000\n"
+"Last-Translator: Rick Paré <rick.pare69@gmail.com>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2161,7 +2161,7 @@ msgstr "Compte rendu détaillé des démarchages, routes de sollicitation et aut
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Payment Methods"
-msgstr ""
+msgstr "Moyens de paiement"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
