--- a/po/es_ES/extension.po
+++ b/po/es_ES/extension.po
@@ -11,9 +11,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-09-28 08:15+0000\n"
-"Last-Translator: Adrian Torralba Roman <adriantorralba@hotmail.com>\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2016-10-21 15:14+0000\n"
+"Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -37,7 +37,7 @@ msgid ""
 "please check your webserver can make external HTTP requests or contact "
 "CiviCRM team on <a href=\"http://forum.civicrm.org/\">CiviCRM forum</a>.<br "
 "/>"
-msgstr "El directorio público de extensiones CiviCRM en %1 no pudo ser contactado - por favor revise si su servidor web puede hacer peticiones HTTP externas o contacte al equipo CiviCRM <a href=\"http://forum.civicrm.org/\">CiviCRM foro </ a>.<br />"
+msgstr "El directorio público de extensiones CiviCRM en %1 no pudo ser contactado - por favor revise si su servidor web puede hacer peticiones HTTP externas o contacte al equipo CiviCRM <a href=\"http://forum.civicrm.org/\">CiviCRM foro</a>.<br />"
 
 #: CRM/Extension/Browser.php
 msgid "Connection Error"
