--- a/po/fr_CA/admin.po
+++ b/po/fr_CA/admin.po
@@ -25,7 +25,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-18 19:44+0000\n"
+"PO-Revision-Date: 2016-10-21 18:29+0000\n"
 "Last-Translator: Rick Paré <rick.pare69@gmail.com>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
@@ -5496,7 +5496,7 @@ msgid ""
 " requires additional payment methods, you can add them here. You can "
 "associate each payment method with a Financial Account which specifies where"
 " the payment is going (e.g. a bank account for checks and cash)."
-msgstr "Vous pouvez choisir d'enregistrer le moyen de paiement utilisé pour chaque contribution et inscription. Les moyens de paiement pré-définis sont obligatoires, vous pouvez modifier leur libellé mais pas les supprimer (ex: chèque, carte de crédit, etc.). Si votre site a besoin de moyens de paiement additionnels, vous pouvez les ajouter ici. Vous pouvez associer à chaque moyen de paiement un compte financier qui définit où le paiement va aller (par exemple sur un compte bancaire pour les chèques et les espèces)."
+msgstr "Vous pouvez choisir d'enregistrer le moyen de paiement utilisé pour chaque contribution et inscription. Les moyens de paiement prédéfinis sont obligatoires, vous pouvez modifier leur libellé, mais pas les supprimer (ex.: chèque, carte de crédit, etc.). Si votre site a besoin de moyens de paiement additionnels, vous pouvez les ajouter ici. Vous pouvez associer à chaque moyen de paiement un compte financier qui définit où le paiement va aller (par exemple sur un compte bancaire pour les chèques et les espèces)."
 
 #: templates/CRM/Admin/Page/Options.tpl
 msgid ""
