--- a/po/fr_CA/common-base.po
+++ b/po/fr_CA/common-base.po
@@ -27,8 +27,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:42+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-10-21 18:22+0000\n"
+"Last-Translator: Rick Paré <rick.pare69@gmail.com>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -26575,7 +26575,7 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "Payment Methods"
-msgstr ""
+msgstr "Moyens de paiement"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Relative Date Filters"
