po: update po/es_ES/member.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/es_ES/member.po
+++ b/po/es_ES/member.po
@@ -21,8 +21,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:42+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-10-21 15:34+0000\n"
+"Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1454,7 +1454,7 @@ msgid ""
 "You need to have at least one <a href=\"%1\">Membership Type</a> with "
 "'Public' visibility in order to enable self-service Membership Signup and "
 "Renewal."
-msgstr "Usted necesita tener por lo menos un <a href=\"%1\"> Tipo de Membresía </ a> con visibilidad \"Pública\" a fin de permitir el auto-servicio de Alta y Renovación de Membresía."
+msgstr "Usted necesita tener por lo menos un <a href=\"%1\">Tipo de Membresía</a> con visibilidad \"Pública\" a fin de permitir el auto-servicio de Alta y Renovación de Membresía."
 
 #: templates/CRM/Member/Form/MembershipRelated.tpl
 msgid "Related Contacts/Memberships"
