po: update po/pt_BR/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/pt_BR/admin.po
+++ b/po/pt_BR/admin.po
@@ -31,7 +31,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-18 15:04+0000\n"
+"PO-Revision-Date: 2016-10-21 16:18+0000\n"
 "Last-Translator: Débora Maia <debora@dotpro.com.br>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/civicrm/civicrm/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
@@ -3884,7 +3884,7 @@ msgstr ""
 msgid ""
 "Disabling this option will prevent CiviCRM from checking for important "
 "security updates. Are you sure?"
-msgstr ""
+msgstr "A desativação dessa opção impedirá o CiviCRM de verificar se existem atualizações de segurança importantes. Você tem certeza?"
 
 #: templates/CRM/Admin/Form/Setting/Path.tpl
 msgid ""
@@ -4508,7 +4508,7 @@ msgstr "Parâmetro"
 
 #: templates/CRM/Admin/Page/APIExplorer.tpl
 msgid "Other operators not available for this action."
-msgstr ""
+msgstr "Outros operadores não estão disponíveis para esta ação."
 
 #: templates/CRM/Admin/Page/APIExplorer.tpl
 msgid "API Params"
