po: update po/fr_CA/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_CA/common-base.po
+++ b/po/fr_CA/common-base.po
@@ -27,7 +27,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-21 18:22+0000\n"
+"PO-Revision-Date: 2016-10-24 19:55+0000\n"
 "Last-Translator: Rick Paré <rick.pare69@gmail.com>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
@@ -26341,7 +26341,7 @@ msgid ""
 "contact fields and then selecting that Profile here. For example you may "
 "want to include columns for Gender and Date of Birth, while eliminating "
 "Country."
-msgstr ""
+msgstr "Pour l'affichage des résultats en tant que \"contacts\", vous pouvez préalablement créer un profil qui permet de modifier les colonnes qui sont affichées. Vous pourrez le sélectionner dans la liste. Le profil permet de définir un ensemble de champs de contact différent. Par exemple, vous pouvez vouloir inclure les colonnes pour le Genre et la Date de naissance, tout en éliminant celle pour le Pays."
 
 #: templates/CRM/Contact/Form/Search/AdvancedCriteria.tpl
 msgid "Display Settings For Results"
